--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,12 @@ async-compression = { version = "0.4", features = [
     "gzip",
 ], default-features = false }
 hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
+clap = { version = "4.5", features = [
+    "derive",
+    "help",
+    "usage",
+    "std",
+], default-features = false }
 
 # Utilities
 serde = { version = "1.0", features = ["derive"] }
@@ -76,7 +82,7 @@ future-not-send = "warn"
 if-not-else = "warn"
 if-then-some-else-none = "warn"
 impl-trait-in-params = "warn"
-macro-use-imports = "forbid"
+macro-use-imports = "deny"
 exhaustive-enums = "warn"
 str-to-string = "warn"
 iter-without-into-iter = "warn"
