--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,8 +43,8 @@ tokio = { version = "1.47", features = [
     "fs",
     "rt",
     "rt-multi-thread",
-    "macros",
     "process",
+    "time",
 ] }
 scc = "3.0"
 tokio-tar = "0.3"
