--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ clap = { version = "4.5", features = [
     "usage",
     "std",
 ], default-features = false }
+tower-http = { version = "0.6", features = ["trace"], default-features = false }
+tracing-subscriber = "0.3"
 
 # Utilities
 serde = { version = "1.0", features = ["derive"] }
