--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2024"
 [dependencies]
 # Backend
 axum = { version = "0.8", features = ["json", "ws"] }
+tower-layer = "0.3"
 tokio-tungstenite = "0.28"
 base64 = "0.22"
 rand = "0.9"
@@ -28,7 +29,7 @@ clap = { version = "4.5", features = [
     "std",
 ], default-features = false }
 tower-http = { version = "0.6", features = ["trace"], default-features = false }
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Utilities
 serde = { version = "1.0", features = ["derive"] }
